--- a/src/components/ui/Card/Card.css
+++ b/src/components/ui/Card/Card.css
@@ -8,7 +8,7 @@
   align-items: flex-start;
   border-radius: 12px;
   background-color: #FFF;
-  box-shadow: 0px 14px 64px -4px rgba(24, 39, 75, 0.12), 0px 8px 22px -6px rgba(24, 39, 75, 0.12);
+  box-shadow: 0px 14px 64px -4px rgb(24 39 75 / 0%), 0px 8px 22px -6px rgba(24, 39, 75, 0.12);
   font-family: 'Inter', sans-serif;
   transition: width 0.3s ease-in-out;
 
